[tool.poetry]
name = "bagging-ensemble"
version = "0.1.0"
description = "Tutorial 'How to Develop a Bagging Ensemble with Python' from https://machinelearningmastery.com/bagging-ensemble-with-python/"
authors = ["Frédéric LAUDARIN <frederic.laudarin@gmail.com>"]
readme = "README.md"
packages = [{include = "bagging_ensemble"}]

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.2.0"
numpy = "^1.24.1"
jupyterlab = "^3.5.2"
ipympl = "^0.9.2"

[tool.poetry.group.dev.dependencies]
nbconvert = "^7.2.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
